footer alignment fixes

--- a/static/css/partials/_site-footer.scss
+++ b/static/css/partials/_site-footer.scss
@@ -98,6 +98,7 @@
 
     .publish {
         margin-top:35px;
+        padding-right: 0px;
 
         p {
             font-size: rem(10);
